@@ -38,6 +38,7 @@ require (
 	mvdan.cc/gofumpt v0.5.0
 	pkg/dump v0.0.0-00010101000000-000000000000
 	pkg/snclient/cmd v0.0.0-00010101000000-000000000000
+	pkg/utils v0.0.0-00010101000000-000000000000
 )
 
 require (
@@ -276,6 +277,5 @@ require (
 	pkg/humanize v0.0.0-00010101000000-000000000000 // indirect
 	pkg/nrpe v0.0.0-00010101000000-000000000000 // indirect
 	pkg/snclient v0.0.0-00010101000000-000000000000 // indirect
-	pkg/utils v0.0.0-00010101000000-000000000000 // indirect
 	pkg/wmi v0.0.0-00010101000000-000000000000 // indirect
 )
